--- a/scss/components/_search.scss
+++ b/scss/components/_search.scss
@@ -1,10 +1,10 @@
 .navigation {
     display: flex;
     align-items: center;
-    height: 69px;
+    height: 4.313rem;
     background: #E7E7E7;
     border-radius: 5px;
-    margin-bottom: 15px;
+    margin-bottom: 0.938rem;
     cursor: pointer;
 
     &__text {
@@ -14,15 +14,15 @@
         border-radius: 5px;
         background: #E7E7E7;
         cursor: pointer;
-        padding-left: 15px;
+        padding-left: 0.938rem;
     }
 
     i {
         display: flex;
         justify-content: flex-end;
         width: 7%;
-        font-size: 32px;
-        padding-right: 15px;
+        font-size: 2rem;
+        padding-right: 0.938rem;
     }
 }
 
